--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,3 +13,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@media screen and (max-width: 44em) {
+  .nav-small{
+    display: block
+  }
+  .navbar{
+    display: none
+  }
+} 
