--- a/src/componentes/pages/profes/mismaterias.css
+++ b/src/componentes/pages/profes/mismaterias.css
@@ -1,5 +1,8 @@
 .table tr td{
     height: 30px;
-    padding: 10;
+    padding: 0;
     overflow: hidden;
+  }
+  .table th {
+    width:50px;
   }
