--- a/src/componentes/file/file.css
+++ b/src/componentes/file/file.css
@@ -38,3 +38,16 @@
   #src-file2::before {
     content: '--    ';
   }
+
+  #nprogress .bar {
+    background: red !important;
+}
+
+#nprogress .peg {
+    box-shadow: 0 0 10px red, 0 0 5px red !important;
+}
+
+#nprogress .spinner-icon {
+    border-top-color: red !important;
+    border-left-color: red !important;
+}
